src/App.css
/* DEFAULTS */

body,
html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

ul {
  padding: 0;
  list-style-type: none;
}

.formswift-button {
  display: none;
}

/* NAV SECTION */

.navbar {
  border-bottom: 1px solid rgb(0, 0, 0);
}

.navbar-nav {
  margin-left: 41rem;
}

.rightSide {
  display: flex;
  margin-left: 2.16rem;
}

.nav-item a {
  font-weight: 500;
}

.navbar-toggler {
  width: 20px;
  height: 20px;
  position: relative;
  transition: 0.5s ease-in-out;
}

.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
  outline: none;
  box-shadow: none;
  border: 0;
  position: relative;
}

.navbar-toggler span {
  margin: 0;
  padding: 0;
}

.toggler-icon {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  background: #d3301a;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  transform: rotate(0deg);
  transition: 0.25s ease-in-out;
}

.middle-bar {
  margin-top: 0px;
}

.navbar-toggler.collapsed .top-bar {
  position: absolute;
  top: 0px;
  transform: rotate(0deg);
}

.navbar-toggler.collapsed .middle-bar {
  opacity: 1;
  position: absolute;
  top: 10px;
  filter: alpha(opacity=100);
}

.navbar-toggler.collapsed .bottom-bar {
  position: absolute;
  top: 20px;
  transform: rotate(0deg);
}

.navbar-toggler .top-bar {
  top: inherit;
  transform: rotate(135deg);
}

.navbar-toggler .middle-bar {
  opacity: 0;
  top: inherit;
  filter: alpha(opacity=0);
}

.navbar-toggler .bottom-bar {
  top: inherit;
  transform: rotate(-135deg);
}

.navbar-toggler.collapsed .toggler-icon {
  background: linear-gradient(
    263deg,
    rgb(246, 74, 252) 5%,
    rgba(0, 212, 255, 1) 100%
  );
}

/* HEADER */

.header {
  padding-top: 4rem;
  padding-bottom: 26rem;
  width: 100%;
}

.profilePic img {
  float: left;
  height: 350px;
  width: 350px;
  border-radius: 50%;
  border: 2px solid black;
  margin-left: 10rem;
}

.intro {
  float: right;
  width: 40%;
  text-align: center;
  margin-top: 6%;
  margin-right: 10rem;
}

/* ABOUT/SKILLS */

.aboutSkills {
  padding-top: 1%;
  padding-bottom: 3%;
  border-radius: 6%;
}

/* ABOUT */

.about {
  padding-top: 1%;
  padding-bottom: 1%;
  text-align: center;
  float: left;
  width: 50%;
  border-radius: 6%;
  border: 1px solid black;
}

.about h1 {
  padding-bottom: 2%;
}

.aboutMe {
  padding-left: 3%;
  padding-right: 3%;
}

/* SKILLS */

.skills {
  padding-top: 1%;
  padding-bottom: 1%;
  text-align: center;
  float: right;
  width: 40%;
  border-radius: 6%;
  border: 1px solid black;
}

.skills h1 {
  padding-bottom: 2%;
}

.skills li {
  list-style: none;
}

.skills img {
  width: 60px;
  margin: 8px;
}

/* EXPERIENCE */

.experience {
  margin-top: 23rem;
  border-radius: 6%;
  border: 1px solid black;
  padding-top: 1%;
  width: 70%;
}

.experience h1 {
  text-align: center;
  padding-bottom: 2%;
}

.experience .container {
  min-height: 80vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.timeline {
  width: 80%;
  height: auto;
  max-width: 1000px;
  margin: 0 auto;
  position: relative;
}

.timeline ul {
  list-style: none;
}
.timeline ul li {
  padding: 20px;
  background-color: #e0e0e0;
  color: rgb(0, 0, 0);
  border-radius: 10px;
  margin-bottom: 20px;
}
.timeline ul li:last-child {
  margin-bottom: 0;
}
.timeline-content h1 {
  font-weight: 500;
  font-size: 25px;
  line-height: 30px;
  margin-bottom: 10px;
}
.timeline-content p {
  font-size: 16px;
  line-height: 20px;
  font-weight: 300;
}
.timeline-content .date {
  font-size: 12px;
  font-weight: 300;
  margin-bottom: 10px;
  letter-spacing: 2px;
}

/* FOOTER */

.content {
  padding-bottom: 4rem;
  padding-top: 2rem;
  text-align: center;
}

/* MEDIA QUERIES */

/* NAV */

@media screen and (max-width: 1400px) {
  .navbar-nav {
    margin-left: 71.25%;
  }
}

@media screen and (max-width: 1200px) {
  .navbar-nav {
    margin-left: 64.5%;
  }
}

@media screen and (max-width: 991px) {
  .navbar-nav {
    margin-left: 0;
    text-align: center;
  }
}

/* HEADER */

@media screen and (max-width: 1399px) {
  .intro {
    margin-top: 8%;
    width: 36%;
  }
}
@media screen and (max-width: 1199px) {
  .header {
    padding-bottom: 5rem;
  }
  .profilePic {
    display: flex;
  }
  .profilePic img {
    margin-left: auto;
    margin-right: auto;
  }
  .intro {
    float: none;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
  }
}
@media screen and (max-width: 991px) {
  .intro {
    width: 60%;
  }
}
@media screen and (max-width: 767px) {
  .header {
    padding-bottom: 3rem;
  }
  .intro {
    width: 70%;
  }
}
@media screen and (max-width: 452px) {
  .intro {
    width: 80%;
  }
}

/* ABOUT/SKILLS */

@media screen and (max-width: 1199px) {
  .aboutSkills {
    width: 90%;
  }
  .about h1 {
    padding-top: 2%;
  }
  .skills h1 {
    padding-top: 2%;
  }
  .skills img {
    width: 53px;
  }
}

@media screen and (max-width: 1075px) {
  .skills img {
    margin: 3px;
  }
}

@media screen and (max-width: 991px) {
  .about {
    width: 100%;
  }
  .skills {
    margin-top: 6%;
    float: left;
    clear: left;
    width: 100%;
  }
  .skills img {
    margin: 9px;
    width: 80px;
  }
}

@media screen and (max-width: 616px) {
  .skills img {
    width: 60px;
    margin: 7px;
  }
}

@media screen and (max-width: 616px) {
  .skills img {
    width: 55px;
    margin: 6px;
  }
}

@media screen and (max-width: 456px) {
  .skills img {
    width: 50px;
    margin: 6px;
  }
}

@media screen and (max-width: 416px) {
  .skills img {
    width: 46px;
    margin: 5px;
  }
}

/* EXPERIENCE */

@media only screen and (min-width: 768px) {
  .timeline:before {
    content: "";
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 2px;
    height: 100%;
    background-color: gray;
  }
  .timeline ul li {
    width: 50%;
    position: relative;
    margin-bottom: 50px;
  }
  .timeline ul li:nth-child(odd) {
    float: left;
    clear: right;
    transform: translateX(-30px);
    border-radius: 20px 0px 20px 20px;
  }
  .timeline ul li:nth-child(even) {
    float: right;
    clear: left;
    transform: translateX(30px);
    border-radius: 0px 20px 20px 20px;
  }
  .timeline ul li::before {
    content: "";
    position: absolute;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background-color: gray;
    top: 0px;
  }
  .timeline ul li:nth-child(odd)::before {
    transform: translate(50%, -50%);
    right: -30px;
  }
  .timeline ul li:nth-child(even)::before {
    transform: translate(-50%, -50%);
    left: -30px;
  }
  .timeline-content .date {
    position: absolute;
    top: -30px;
  }
}

@media screen and (max-width: 1200px) {
  .experience {
    margin-top: 26rem;
    padding-top: 2%;
  }
}

@media screen and (max-width: 992px) {
  .experience {
    margin-top: 50rem;
  }
}

@media screen and (max-width: 1200px) {
  .experience {
    width: 100%;
  }
}

@media screen and (max-width: 785px) {
  .experience {
    margin-top: 51rem;
  }
}

@media screen and (max-width: 768px) {
  .experience {
    margin-top: 51.5rem;
  }
}

@media screen and (max-width: 616px) {
  .experience {
    margin-top: 46rem;
  }
}

@media screen and (max-width: 595px) {
  .experience {
    width: 90%;
    margin-top: 45.5rem;
  }
}

@media screen and (max-width: 564px) {
  .experience {
    margin-top: 46.5rem;
  }
}

@media screen and (max-width: 549px) {
  .experience {
    margin-top: 47.5rem;
  }
}

@media screen and (max-width: 504px) {
  .experience {
    margin-top: 48.5rem;
  }
}

@media screen and (max-width: 477px) {
  .experience {
    margin-top: 51rem;
  }
  .timeline {
    margin: 0;
    padding: 0;
    width: 95%;
  }
}

@media screen and (max-width: 456px) {
  .experience {
    margin-top: 50rem;
  }
}

@media screen and (max-width: 437px) {
  .experience {
    margin-top: 51rem;
  }
}

@media screen and (max-width: 416px) {
  .experience {
    margin-top: 50rem;
  }
}

@media screen and (max-width: 410px) {
  .experience {
    margin-top: 51.5rem;
  }
}

@media screen and (max-width: 396px) {
  .experience {
    margin-top: 52.5rem;
  }
}

